Bugfix visibility error

--- a/src/component/form.scss
+++ b/src/component/form.scss
@@ -220,7 +220,7 @@ textarea {
   }
 
   & > .error {
-    visibility: visible;
+    visibility: visible !important;
   }
 }
 
